# aoc-2021

./: .pre-commit-config.yaml  Makefile  aoc_template.py  pyproject.toml
day1/: README.md  day1.py  day1_test.py
day10/: day10.py
day11/: day11.py  day11_test.py
day12/: day12.py
day13/: day13.py
day14/: day14.py  day14_test.py
day15/: day15.py
day16/: Bitstream.py  Bitstream_test.py  bitstream.py  bitstream_test.py  day16.py  day16_test.py  utils.py
day16/packets/: literal.py  operator.py  operator_test.py
day2/: day2.py  day2_test.py  input.txt
day3/: README.md  day3.py  day3_part2.py
day4/: README.md  day4.py  day4_2.py  day4_test.py
day5/: day5.py  day5_test.py
day6/: __init__.py  day6.py  day6_test.py
day7/: day7.py
day8/: day8.py
day9/: day9.py
