[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Florian Aumeier (FG-211) <Florian.AB.Aumeier@bmw.de>"]

[tool.poetry.dependencies]
python = "3.10"
more-itertools = "^8.12.0"
jupyter = "^1.0.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
advent-of-code-data = "^1.1.1"
parse = "^1.19.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-variables-names = "^0.0.4"
flake8-bugbear = "^21.11.29"
mypy = "^0.910"
pytest-cov = "^3.0.0"
xenon = "^0.8.0"
flake8-black = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
